--- a/music/personal/templates/personal/modalAgreement.html
+++ b/music/personal/templates/personal/modalAgreement.html
@@ -11,7 +11,7 @@
             <div class="modal__form--box">
                 <label class="form__label" for="fio">
                     Фамилия, имя, отчество подписанта договора
-                    <input class="form__input" type="text" name="fio" id="fio" required
+                    <input class="form__input" type="text" name="fio" id="fio" 
                         placeholder="Введите Ф.И.О">
                     <span class="form__error">Поле обязательно для заполнения</span>
                 </label>
@@ -23,20 +23,20 @@
                 </label>
                 <label class="form__label" for="mail">
                     Адресс электронной почты
-                    <input class="form__input" type="mail" name="mail" id="mail" required
+                    <input class="form__input" type="mail" name="mail" id="mail" 
                         placeholder="Введите почту">
                     <span class="form__error">Поле обязательно для заполнения</span>
                 </label>
                 <div class="modal__form--row">
                     <label class="form__label" for="snils">
                         СНИЛС
-                        <input class="form__input" type="text" name="snils" id="snils" required
+                        <input class="form__input" type="text" name="snils" id="snils" 
                             placeholder="Введите СНИЛС">
                         <span class="form__error">Поле обязательно для заполнения</span>
                     </label>
                     <label class="form__label" for="inn">
                         ИНН
-                        <input class="form__input" type="text" name="inn" id="inn" required
+                        <input class="form__input" type="text" name="inn" id="inn" 
                             placeholder="Введите ИНН">
                         <span class="form__error">Поле обязательно для заполнения</span>
                     </label>
@@ -46,18 +46,18 @@
                 <p class="modal__form--subtitle">Паспортные данные</p>
                 <div class="modal__form--row">
                     <label class="form__label" for="number">
-                        <input class="form__input" type="text" name="number" id="number" required
+                        <input class="form__input" type="text" name="number" id="number" 
                             placeholder="Номер">
                         <span class="form__error">Поле обязательно для заполнения</span>
                     </label>
                     <label class="form__label" for="series">
-                        <input class="form__input" type="text" name="series" id="series" required
+                        <input class="form__input" type="text" name="series" id="series" 
                             placeholder="Серия">
                         <span class="form__error">Поле обязательно для заполнения</span>
                     </label>
                 </div>
                 <label class="form__label" for="department">
-                    <input class="form__input" type="text" name="department" id="department" required
+                    <input class="form__input" type="text" name="departament" id="departament" 
                         placeholder="Кем выдан">
                     <span class="form__error">Поле обязательно для заполнения</span>
                 </label>
@@ -68,13 +68,13 @@
                         <span class="form__error">Поле обязательно для заполнения</span>
                     </label>
                     <label class="form__label" for="cod">
-                        <input class="form__input" type="text" name="cod" id="cod" required
+                        <input class="form__input" type="text" name="cod" id="cod" 
                             placeholder="Код подразделения">
                         <span class="form__error">Поле обязательно для заполнения</span>
                     </label>
                 </div>
                 <label class="form__label" for="address">
-                    <input class="form__input" type="text" name="address" id="address" required
+                    <input class="form__input" type="text" name="address" id="address" 
                         placeholder="Адрес регистрации">
                     <span class="form__error">Поле обязательно для заполнения</span>
                 </label>
@@ -83,31 +83,31 @@
                 <p class="modal__form--subtitle">Банковские реквизиты</p>
                 <label class="form__label" for="recipient">
                     Фамилия, имя, отчество получателя
-                    <input class="form__input" type="text" name="recipient" id="recipient" required
+                    <input class="form__input" type="text" name="recipient" id="recipient" 
                         placeholder="Введите Ф.И.О">
                     <span class="form__error">Поле обязательно для заполнения</span>
                 </label>
                 <label class="form__label" for="nameBank">
                     Нименование банка получателя
-                    <input class="form__input" type="text" name="nameBank" id="nameBank" required
+                    <input class="form__input" type="text" name="nameBank" id="nameBank" 
                         placeholder="Нименование банка">
                     <span class="form__error">Поле обязательно для заполнения</span>
                 </label>
                 <label class="form__label" for="checking">
                     Расчетный счет
-                    <input class="form__input" type="text" name="checking" id="checking" required
+                    <input class="form__input" type="text" name="checking" id="checking" 
                         placeholder="Номер счета">
                     <span class="form__error">Поле обязательно для заполнения</span>
                 </label>
                 <label class="form__label" for="checkingCorr">
                     Корреспондентский счет
-                    <input class="form__input" type="text" name="checkingCorr" id="checkingCorr" required
+                    <input class="form__input" type="text" name="checkingCorr" id="checkingCorr" 
                         placeholder="Номер счета">
                     <span class="form__error">Поле обязательно для заполнения</span>
                 </label>
                 <label class="form__label" for="bik">
                     БИК банка
-                    <input class="form__input" type="text" name="bik" id="bik" required placeholder="БИК">
+                    <input class="form__input" type="text" name="bik" id="bik"  placeholder="БИК">
                     <span class="form__error">Поле обязательно для заполнения</span>
                 </label>
             </div>
