--- a/music/personal/templates/personal/stepPayment.html
+++ b/music/personal/templates/personal/stepPayment.html
@@ -22,7 +22,7 @@
             <span class="payment__text">К оплате 1000 </span>
             <button class="payment__btn btn agreement">
                 Подписать договор</button>
-            <button class="btn header__link link step__btn" data-step="7">
+            <button class="btn header__link link step__btn" data-step="7" id="rezalt" disabled>
                 <span class="link__line link__line--top"></span>
                 <span class="link__line link__line--right"></span>
                 <span class="link__line link__line--bottom"></span>
