console form login, signup

--- a/music/personal/templates/personal/modalLogin.html
+++ b/music/personal/templates/personal/modalLogin.html
@@ -16,7 +16,7 @@
             <div class="modal__inner">
                 <div class="card-front">
                     <div class="center-wrap">
-                        <form class="modal__form form" action="POST">
+                        <form class="modal__form form" action="POST" id="signup">
                             <label class="form__label" for="email">
                                 Ваш логин (адрес электронной почты)
                                 <input class="form__input" type="email" name="email" id="email" required
@@ -36,7 +36,7 @@
                 </div>
                 <div class="card-back">
                     <div class="center-wrap">
-                        <form class="modal__form form hidden" action="POST">
+                        <form class="modal__form form hidden" action="POST" id="login">
                             <label class="form__label" for="email">
                                 Ваш логин (адрес электронной почты)
                                 <input class="form__input" type="email" name="email" id="newEmail" required
