add forms album

--- a/music/personal/templates/personal/stepFiveAlbum.html
+++ b/music/personal/templates/personal/stepFiveAlbum.html
@@ -4,19 +4,19 @@
     <div class="step__section--album hidden step__section--box">
         <h2 class="download__title">Ссылки на площадки</h2>
         <form class="form-five" action="POST" id="formFiveAlbum">
-            <label class="form-step__label" for="link1-1">
+            <label class="form-step__label" for="link-album-1">
                 <p>Ссылка на карточку исполнителя в</p>
-                <input class="form-step__input" type="text" id="link1-1">
+                <input class="form-step__input" type="text" id="link-album-1">
             </label>
-            <label class="form-step__label" for="link1-2">
+            <label class="form-step__label" for="link-album-2">
                 <p>Ссылка на карточку исполнителя в</p>
-                <input class="form-step__input" type="text" id="link1-2">
+                <input class="form-step__input" type="text" id="link-album-2">
             </label>
-            <label class="form-step__label" for="link1-3">
+            <label class="form-step__label" for="link-album-3">
                 <p>Ссылка на карточку исполнителя в</p>
-                <input class="form-step__input" type="text" id="link1-3">
+                <input class="form-step__input" type="text" id="link-album-3">
             </label>
-            <label class="form-step__checkbox checkbox" for="check1">
+            <label class="form-step__checkbox checkbox" for="check-album">
                 <input class="checkbox__input" id="check1" type="checkbox" checked>
                 <span class="checkbox__check"></span>
                 <span class="checkbox__box"></span>
