--- a/music/main/static/main/css/personal.css
+++ b/music/main/static/main/css/personal.css
@@ -1419,7 +1419,11 @@
     border: 1px solid var(--color-blue);
     border-radius: 10px; 
     outline: none;
+    width: 300px;
+    align-self: center;
     color: var(--color-white);
+    position: relative;
+    z-index: 100;
     transition: color 0.3s ease-in-out, border 0.3s ease-in-out;
 }
 
@@ -1433,6 +1437,8 @@
     width: 100%;
     border-radius: 20px;
     border: 1px solid rgba(83, 95, 246, 0.4);
+    position: relative;
+    z-index: 0;
 }
 
 .form-step__inner--box {
@@ -1509,6 +1515,12 @@
     transition: border 0.3s ease-in-out;
 }
 
+.form-step__content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;    
+}
+
 .form-step__inner > .form-step__label {
     position: absolute;
     width: 100%;
@@ -1547,23 +1559,48 @@
     height: 90%;
 }
 
-.form-step__wrapper {
+.form-step__wrapper,  .form-step__container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 30px 20px;
     width: 100%;
     opacity: 1;
     visibility: visible;
+    position: relative;
+    z-index: -1;
 }
 
-.form-step__wrapper.hidden {
-    opacity: 0;
-    visibility: hidden;
-    display: none;
+.form-step__track {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+    border-radius: 20px;
+    border: 1px solid rgba(83, 95, 246, 0.4);
+    position: relative;
+    z-index: -1;
+}
+
+.form-step__track-top {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    width: 100%;
+}
+
+.tracks {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    width: 100%;
+    position: relative;
+    z-index: 0;
 }
 
 .form-step__label {
     position: relative;
+    z-index: -1;
     display: flex;
     gap: 10px;
     opacity: 0.8;
@@ -1644,7 +1681,9 @@ input[type='date']::after {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 25px;    
+    gap: 25px;   
+    position: relative;
+    z-index: 0; 
 }
 
 .added-singl {
@@ -1681,13 +1720,10 @@ input[type='date']::after {
     visibility: hidden;
 }
 
-.upload-singl {   
-    padding: 20px;
+.upload-singl {       
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    border-radius: 20px;
-    border: 1px solid rgba(83, 95, 246, 0.4);
+    gap: 20px;    
     width: 100%;
 }
 
@@ -1695,6 +1731,12 @@ input[type='date']::after {
     display: flex;
     gap: 40px;
     width: 100%;
+}
+
+.upload-singl-info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .form-four > .form-step__wrapper > .form-step__label > .tultip {
@@ -1840,8 +1882,9 @@ input[type='date']::after {
     padding: 20px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 15px;
-    justify-content: center;
+    width: 100%;
     border: 1px solid rgba(83, 95, 246, 0.4);
     border-radius: 10px; 
 }
