--- a/music/personal/templates/personal/stepThree.html
+++ b/music/personal/templates/personal/stepThree.html
@@ -7,25 +7,20 @@
             <div class="upload-singl">
             <h6 class="form-step__title">Загрузите WAV файл(ы)</h6>
             <div class="upload-singl-box">
-                <div class="form-step__inner">
+                <div class="form-step__inner inner">
                     <input class="form-step__file" id="audio" type="file" accept="audio/wav">
                     <label class="form-step__label" for="audio">
                         <span>+</span>
                     </label>
                 </div>
+                <div class="upload-singl-info">
                 <span class="upload-singl-text hidden">Файл успешно загружен</span>
-            </div>
-            {% comment %} <button class="btn header__link link form-step__btn" type="button" id="addAudio" disabled>
-                <span class="link__line link__line--top"></span>
-                <span class="link__line link__line--right"></span>
-                <span class="link__line link__line--bottom"></span>
-                <span class="link__line link__line--left"></span>
-                Загрузить</button> {% endcomment %}
-            
+                <span class="upload-singl-text upload-singl-name"></span>
+                </div>
+            </div>            
         </div>
         <div class="added-singl">
-            <img class="added-singl__img" src="" alt="">
-            {% comment %} {% static 'main/img/personal_page/Pendragon.jpg' %} {% endcomment %}
+            <img class="added-singl__img" src="" alt="">            
             <div class="added-singl__content">
                 <h5 class="added-singl__name"></h5>
                 <span class="added-singl__autor"></span>
