--- a/music/personal/templates/personal/stepTwoAlbum.html
+++ b/music/personal/templates/personal/stepTwoAlbum.html
@@ -4,8 +4,7 @@
     <h2 class="download__title">Информация о альбоме</h2>
         <form class="form-two form-step" action="POST" id="formTwoAlbum">
             <h6 class="form-step__title">Выберите жанр</h6>
-            <select class="form-step__select" name="genreAlbum" id="genreAlbum">
-                {% comment %} <option default>Выберите жанр</option> {% endcomment %}
+            <select class="form-step__select" name="genreAlbum" id="genreAlbum">                
                 <option value="pop">Поп-музыка</option>
                 <option value="rok">Рок-музыка</option>
                 <option value="jazz">Джаз</option>
@@ -27,7 +26,7 @@
                     </p>
                 </div>
             </div>
-            <div class="form-step__inner">
+            <div class="form-step__inner img-album">
                 <input class="form-step__file" type="file" accept="image/*" id="imgAlbum">
                 <label class="form-step__label" for="imgAlbum">
                     <span>+</span>
@@ -106,50 +105,30 @@
                     </div>
                 </label>
             </div>
-            <div class="form-step__wrapper">
-                <label class="form-step__label" for="titleSingle">
-                    <p>Название трека</p>
-                    <input class="form-step__input" type="text" id="titleSingle"
-                        placeholder="Название трека">
-                    <div class="tultip">
-                        <button class="tultip__btn" type="button">
-                            <svg class="tultip__icon">
-                                <use xlink:href="#tultip"></use>
-                            </svg>
-                        </button>
-                        <p class="tultip__content">Lorem ipsum dolor sit, amet consectetur
-                            adipisicing
-                            elit.
-                            Necessitatibus magni modi, adipisci cumque, minus nulla tenetur
-                            pariatur
-                        </p>
-                    </div>
-                </label>
-                <button class="add-track__btn btn" type="button">
-            Еще трек</button>
-            </div>
-            <div class="form-step__wrapper new-track hidden">
-                <label class="form-step__label" for="titleSingle2">
-                    <p>Название трека</p>
-                    <input class="form-step__input" type="text" id="titleSingle2"
-                        placeholder="Название трека">
-                    <div class="tultip">
-                        <button class="tultip__btn" type="button">
-                            <svg class="tultip__icon">
-                                <use xlink:href="#tultip"></use>
-                            </svg>
-                        </button>
-                        <p class="tultip__content">Lorem ipsum dolor sit, amet consectetur
-                            adipisicing
-                            elit.
-                            Necessitatibus magni modi, adipisci cumque, minus nulla tenetur
-                            pariatur
-                        </p>
-                    </div>
-                </label>
-                <button class="add-track__btn btn" type="button">
-            Еще трек</button>
-            </div>
+            {% comment %} <div class="tracks">
+                <div class="form-step__container">
+                    <label class="form-step__label" for="titleSingle0">
+                        <p>Название трека</p>
+                        <input class="form-step__input track-name" type="text" id="titleSingle0"
+                            placeholder="Название трека">
+                        <div class="tultip">
+                            <button class="tultip__btn" type="button">
+                                <svg class="tultip__icon">
+                                    <use xlink:href="#tultip"></use>
+                                </svg>
+                            </button>
+                            <p class="tultip__content">Lorem ipsum dolor sit, amet consectetur
+                                adipisicing
+                                elit.
+                                Necessitatibus magni modi, adipisci cumque, minus nulla tenetur
+                                pariatur
+                            </p>
+                        </div>
+                    </label>
+                    <button class="add-track__btn btn" type="button">
+                Еще трек</button>
+                </div>
+            </div>             {% endcomment %}
             <button class="btn header__link link step__btn" type="submit" data-step="3">
                 <span class="link__line link__line--top"></span>
                 <span class="link__line link__line--right"></span>
